--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^7.8.6",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5"
   }
 }
